--- a/readthedocs.yml
+++ b/readthedocs.yml
@@ -5,9 +5,13 @@ sphinx:
 conda:
     environment: sphinx/env.yml
 python:
-   version: 3.8
+  #  version: 3.8
    install:
       - method: pip
         path: .
       - method: setuptools
         path: .
+build:
+  os: ubuntu-22.04
+  tools:
+    python: "3.9"
