--- a/readthedocs.yml
+++ b/readthedocs.yml
@@ -4,14 +4,15 @@ sphinx:
   configuration: sphinx/source/conf.py
 conda:
     environment: sphinx/env.yml
-python:
-  #  version: 3.8
-   install:
-      - method: pip
-        path: .
-      - method: setuptools
-        path: .
+# python:
+#   #  version: 3.8
+#    install:
+#       - method: pip
+#         path: .
+#       - method: setuptools
+#         path: .
 build:
   os: ubuntu-22.04
   tools:
-    python: "3.9"
+    # python: "3.9"
+    python: 'mambaforge-22.9'
