--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,10 @@ classifiers = [
     "Programming Language :: Python :: 3 :: Only",
 ]
 requires-python = ">=3.8"
-dependencies = ['pandas<2', 'scipy'
+dependencies = [
+  'pandas<2', 
+  'scipy',
+  'numpy<2'
 ]
 
 # [tool.ruff]
